<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_65sdp"
        android:background="@drawable/loginbg"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="left">

        <com.rapido.provider.Transportation.Utilities.MyBoldTextView
            android:id="@+id/txtSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="right"
            android:padding="@dimen/_5sdp"
            android:text="@string/login"
            android:textColor="@color/content_background"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/appicon"
            android:layout_below="@+id/button2"
            android:layout_marginTop="@dimen/_8sdp"

            android:layout_centerHorizontal="true"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/button2"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/resgist"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp" />

        <LinearLayout
            android:id="@+id/viewLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_172sdp"
            android:layout_centerVertical="true"

            android:background="@drawable/middle_box"
            android:orientation="vertical">

            <com.rapido.provider.Transportation.Utilities.MyEditText
                android:id="@+id/etName"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="match_parent"
                android:layout_weight="0.98"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/transparent"
                android:drawableLeft="@drawable/ic_user_name"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/username"
                android:textColorHint="@color/black"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp" />
            <View
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="#f2f2f2" />
            <com.rapido.provider.Transportation.Utilities.MyEditText
                android:id="@+id/etEmail"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="match_parent"
                android:layout_weight="1.05"
                android:gravity="center_vertical"
                android:backgroundTint="@color/transparent"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp" />
            <View
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="#f2f2f2" />


            <com.rapido.provider.Transportation.Utilities.MyEditText
                android:id="@+id/etPassword"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="match_parent"
                android:layout_weight="1.05"
                android:backgroundTint="@color/transparent"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sdp" />
            <View
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="#f2f2f2" />


            <com.rapido.provider.Transportation.Utilities.MyTextView
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.98"
                android:backgroundTint="@color/transparent"
                android:drawableTint="@color/view_grey_bg"
                android:drawableLeft="@drawable/calendar_clock"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingLeft="@dimen/_6sdp"
                android:visibility="gone"
                android:gravity="center_vertical"
                android:hint="@string/dob"
                android:inputType="date"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>


        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!---->
            <!--android:visibility="visible">-->

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/round_shape"
            android:text="Entrer"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <!--</LinearLayout>-->




    </RelativeLayout>




</RelativeLayout>